@@ -5,6 +5,7 @@ local config = require("items/song_manager")
 local properties = {
 	savegame_variable = "possession_song_12",
   music = "items/ocarina/song/12_secret",
+	type = "teleportation",
   destination_map = "out/k1",
 	destination = "from_north_hut",
 	duration = 3000,
