@@ -5,6 +5,7 @@ local config = require("items/song_manager")
 local properties = {
 	savegame_variable = "possession_song_5",
   music = "items/ocarina/song/5_lorule",
+	type = "teleportation",
   destination_map = "out/b5",
 	destination = "from_flute",
 	duration = 18000,
