@@ -5,6 +5,7 @@ local config = require("items/song_manager")
 local properties = {
 	savegame_variable = "possession_song_8",
   music = "items/ocarina/song/8_shadow",
+	type = "teleportation",
   destination_map = "out/a1",
 	destination = "from_flute",
 	duration = 20000,
