@@ -204,7 +204,7 @@ tile{
   x = 896,
   y = 640,
   width = 144,
-  height = 176,
+  height = 192,
   pattern = "907",
 }
 
