@@ -1,12 +1,16 @@
 animation{
   name = "normal",
   src_image = "entities/notes.png",
-  frame_delay = 200,
-  frame_to_loop_on = 0,
+  frame_delay = 300,
+  frame_to_loop_on = 3,
   directions = {
     { x = 0, y = 0, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
-    { x = 0, y = 0, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
-    { x = 0, y = 0, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
-    { x = 0, y = 0, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
+    { x = 0, y = 32, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
+    { x = 0, y = 64, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
+    { x = 0, y = 96, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
+    { x = 0, y = 128, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
+    { x = 0, y = 160, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
+    { x = 0, y = 192, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
+    { x = 0, y = 224, frame_width = 24, frame_height = 32, origin_x = 12, origin_y = 29, num_frames = 9 },
   },
 }
