@@ -2,9 +2,9 @@ animation{
   name = "stopped",
   src_image = "npc/hyrule.png",
   directions = {
-    { x = 720, y = 96, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29 },
-    { x = 752, y = 96, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29 },
-    { x = 784, y = 96, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29 },
-    { x = 816, y = 96, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29 },
+    { x = 840, y = 352, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29 },
+    { x = 872, y = 352, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29 },
+    { x = 904, y = 352, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29 },
+    { x = 936, y = 352, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29 },
   },
 }
