@@ -450,6 +450,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Updated dungeon minimaps (#2).
 	CHG: Overhauled the game over menu (#199).
 	CHG: Changed the daytime witch to one minute before the hour for light to update faster.
+	CHG: Standardised ocarina songs.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
